# slayer-escape

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/_workflows/: win.yml
.github/workflows/: ubuntu.yml
Resources/config/: setting.json  user_profile.json
Resources/images/battle/maps/: firstMap.tmx
Resources/images/battle/maps/location_1/: firstMap.tmx  firstMapTileMap.tsx
Resources/images/battle/maps/location_2/: grass.tsx  plant.tsx  plantShadow.tsx  props.tsx  ruines.tmx  shadow.tsx  shadowPlant.tsx  stoneGround.tsx  struct.tsx  tilesetGrass.tsx  tilesetStoneGround.tsx  tilesetWall.tsx  wall.tsx
Resources/images/characters/colossalCrow/anim/: bones_ske.json  bones_tex.json
Resources/images/characters/cultistMage/anim/: bones_ske.json  bones_tex.json
Resources/images/characters/harpy/anim/: spine.atlas  spine.skel
Resources/images/characters/mountainHarpy/anim/: bones_ske.json  bones_tex.json
Resources/images/characters/orcChiefGrunt/anim/: bone_ske.json  bone_tex.json
Resources/images/characters/slimeAttacker/anim/: spine.atlas  spine.skel  spine_ske.json  spine_tex.json
Resources/images/characters/slimeBasic/anim/: bones_ske.json  bones_tex.json  spine.atlas  spine.skel
Resources/images/characters/slimeCaster/anim/: bones_ske.json  bones_tex.json  spine.atlas  spine.skel
Resources/images/characters/slimeDefender/anim/: spine.atlas  spine.skel  spine_ske.json  spine_tex.json
Resources/largeResolution/properties/nodeProperties/: example.json
Resources/properties/database/buildings/: db.json
Resources/properties/database/characters/: db.json
Resources/properties/database/maps/: db.json
Resources/properties/database/tiles/: db.json
Resources/properties/nodeProperties/: example.json
Resources/properties/nodeProperties/battle/: battleIncomeWidget.json  battleObject.json  buildSlot.json  playerController.json  stickBigCircle.json  stickButton.json  stickSmallCircle.json
Resources/properties/nodeProperties/battle/buildings/: altar.json  humanCastle.json  orcCastle.json  slimeCamp.json  slimeSkull.json  slimeTree.json
Resources/properties/nodeProperties/battle/characters/: harpy.json  mountainHarpy.json  mountainHarpyB.json  orcChiefGrunt.json  orcChiefGruntB.json  simpleHero.json  slimeAttacker.json  slimeAttackerB.json  slimeBasic.json  slimeBasicB.json  slimeCaster.json  slimeCasterB.json  slimeDefender.json  slimeDefenderB.json
Resources/properties/nodeProperties/battle/themes/: locations.json
Resources/properties/nodeProperties/battle/themes/locations/forest/: 1stPlan.json  base.json  ground.json  positions.json  sky.json
Resources/properties/nodeProperties/battle/tiles/: ground.json  spawnEnemy.json  spawnPlayer.json  wall.json
Resources/properties/nodeProperties/scenes/: battle3dScene.json  battleScene.json  blackBg.json
Resources/properties/nodeProperties/widgets/: cardProgressBar.json
Resources/properties/nodeProperties/windows/: notifyWindow.json  windowBase.json
Resources/properties/nodes/: example.json
Resources/properties/nodes/battle/: battleIncomeWidget.json  battleObject.json  buildSlot.json  playerController.json  stickBigCircle.json  stickButton.json  stickSmallCircle.json
Resources/properties/nodes/battle/characters/: simpleHero.json
Resources/properties/nodes/battle/themes/locations/forest/: 1stPlan.json  base.json  ground.json  sky.json
Resources/properties/nodes/scenes/: battle3dScene.json  battleScene.json  blackBg.json
Resources/properties/nodes/widgets/: cardProgressBar.json
Resources/properties/nodes/windows/: notifyWindow.json  windowBase.json
Resources/sounds/: sounds.json
cmake/: CompilerWarnings.cmake  IOSHelper.cmake
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: main.cpp  main.h
src/: AppDelegate.cpp  AppDelegate.h
src/battle3dModule/: battle3dScene.cpp  battle3dScene.h
src/battleModule/: battleField.cpp  battleField.h  battleObject.cpp  battleObject.h  battleScene.cpp  battleScene.h  mapTile.cpp  mapTile.h
src/battleModule/interface/: battleIncomeWidget.cpp  battleIncomeWidget.h  buildSlot.cpp  buildSlot.h
src/battleModule/playerData/: playerData.cpp  playerData.h
src/battleModule/players/: playerBase.cpp  playerBase.h  playerController.cpp  playerController.h  playerControllerHelper.cpp  playerControllerHelper.h  stickButton.cpp  stickButton.h
src/databasesModule/: buildingsDatabase.cpp  buildingsDatabase.h  charactersDatabase.cpp  charactersDatabase.h  databaseManager.cpp  databaseManager.h  databaseTool.cpp  databaseTool.h  mapsDatabase.cpp  mapsDatabase.h  tilesDatabase.cpp  tilesDatabase.h
src/debugModule/: heroProfileDebug.cpp  heroProfileDebug.h  soundLibraryDebug.cpp  soundLibraryDebug.h
src/interfaceModule/: customNodeTypes.cpp  customNodeTypes.h
src/interfaceModule/widgets/: cardProgressBar.cpp  cardProgressBar.h
src/interfaceModule/windows/: notifyWindow.cpp  notifyWindow.h
src/localProfile/: heroesProfileBlock.cpp  heroesProfileBlock.h
tests/: CMakeLists.txt  TestIntegration.cpp
utilities/: buildnum.ver  bump_buildnum.py
